# rpi-moro

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README-ja.md  README.md  codes.json  mise.toml  mkdocs.yml  pyproject.toml  tox.ini
.github/: copilot-instructions.md
docs/: camera_streaming.md  gen_ref_pages.py  index.md
src/moro/: __init__.py  __main__.py  _cli.py  py.typed
src/moro/cli/: __init__.py  _utils.py  camera_commands.py  cli.py  example.py
src/moro/config/: __init__.py  logging.yml  settings.py
src/moro/modules/: __init__.py
src/moro/modules/camera/: __init__.py  camera.py  emitters.py  processors.py  protocols.py  streamer.py  streaming.py
src/moro/modules/camera/static/js/: stream.js
src/moro/modules/camera/templates/: stream.html
tests/: test_cli.py
tests/modules/camera/: test_camera.py  test_streaming_frame_processing.py  test_streaming_init.py  test_streaming_socketio.py  test_streaming_start_stop.py  test_streaming_streaming.py
