[project]
name = "moro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "negineri", email = "negineri@sfc.wide.ad.jp" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
moro = "moro:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
