[project]
name = "moro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "negineri", email = "negineri@sfc.wide.ad.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "pre-commit>=4.2.0",
]

[project.scripts]
moro = "moro._cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = [
    "tests/",         # Optional: Skip if using stubs/mocks
    "build/",
    "dist/"
]
plugins = [
    # "pydantic.mypy"  # If you're using pydantic
]

[tool.ruff]
line-length = 100
fix = true
exclude = [
    "build",
    "dist",
    ".venv",
    "tests/mocks"
]
src = ["app", "src"]
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (errors)
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "D",    # pydocstyle
    "T20",  # flake8-print (disallow print)
    "RET",  # flake8-return
    "A",    # flake8-builtins
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D211", # D211 conflicts with D203
    "D212", # D212 conflicts with D213
    # "D100",  # Missing docstring in public module
    # "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
# Allow test functions to have print statements or less strict docstring rules
"tests/**/*.py" = ["S101", "D101", "D102", "D103"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]
